Refactor application properties and CORS configuration for improved clarity and security